force-app/main/default/objects/Folder__c/Folder__c.object-meta.xml
<CustomObject>
    <label>Folder</label>
    <nameField>
        <label>Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>