force-app/main/default/objects/Folder__c/fields/Parent_Folder__c.field-meta.xml
<CustomField>
    <fullName>Parent_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Folder</label>
    <referenceTo>Folder__c</referenceTo>
    <relationshipLabel>Child Folders</relationshipLabel>
    <relationshipName>Folders</relationshipName>
    <type>Lookup</type>
</CustomField>