force-app/main/default/objects/Folder__c/fields/Parent_Template_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Template_Folder_Id__c</fullName>
    <label>Parent Template Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>