force-app/main/default/objects/Folder__c/fields/Template_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Folder_Id__c</fullName>
    <label>Template Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>